<resources>
    <string name="app_name">EdvoraTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nearest">Nearest</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="rides">Rides:</string>
    <string name="filter">Filters</string>
    <string name="map_url">map url</string>
    <string name="city_name">City Name</string>
    <string name="state_name">State Name</string>
    <string name="tap_layout">Tap Layout</string>
    <string name="edvora">Edvora</string>
    <string name="ahmed_elsawy">Ahmed Elsawy</string>
    <string name="menu_arrow">MenuArrow</string>
</resources>