<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="end">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/round_background"
        android:paddingStart="30dp"
        android:paddingTop="23dp"
        android:paddingEnd="30dp"
        android:paddingBottom="23dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_light"
            android:text="@string/filter"
            android:textColor="#A5A5A5"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="160dp"
            android:layout_height=".5dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/state_filter"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/filter_background"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <TextView
                android:id="@+id/state_filter_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:text="@string/state_name"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/state_filter_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/arrow_drop_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/city_filter"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/filter_background"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state_filter">

            <TextView
                android:id="@+id/city_filter_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:text="@string/city_name"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/city_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/arrow_drop_down"
                android:contentDescription="@string/menu_arrow" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>