<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="5dp"
    android:elevation="4dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black400"
        android:padding="10dp">

        <ImageView
            android:id="@+id/map_img"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_margin="24dp"
            android:contentDescription="@string/map_url"
            android:scaleType="fitXY"
            android:src="@drawable/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/city_name"
            style="@style/locationStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            app:layout_constraintStart_toStartOf="@id/map_img"
            app:layout_constraintTop_toBottomOf="@id/map_img" />

        <TextView
            android:id="@+id/state_name"
            style="@style/locationStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_name"
            app:layout_constraintEnd_toEndOf="@+id/map_img"
            app:layout_constraintTop_toBottomOf="@id/map_img" />


        <TextView
            android:id="@+id/ride_id"
            style="@style/ride_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Ride Id : 002"
            app:layout_constraintEnd_toEndOf="@id/map_img"
            app:layout_constraintStart_toStartOf="@id/map_img"
            app:layout_constraintTop_toBottomOf="@+id/city_name" />

        <TextView
            android:id="@+id/origin_station"
            style="@style/ride_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Origin Station : 20"
            app:layout_constraintEnd_toEndOf="@id/map_img"
            app:layout_constraintStart_toStartOf="@id/map_img"
            app:layout_constraintTop_toBottomOf="@+id/ride_id" />

        <TextView
            android:id="@+id/station_path"
            style="@style/ride_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Station Path : [20, 39, 40, 42, 54, 63, 72, 88, 98]"
            app:layout_constraintEnd_toEndOf="@id/map_img"
            app:layout_constraintStart_toStartOf="@id/map_img"
            app:layout_constraintTop_toBottomOf="@+id/origin_station" />

        <TextView
            android:id="@+id/date"
            style="@style/ride_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Date : 15th Feb 2022 16:33"
            app:layout_constraintEnd_toEndOf="@id/map_img"
            app:layout_constraintStart_toStartOf="@id/map_img"
            app:layout_constraintTop_toBottomOf="@+id/station_path" />

        <TextView
            android:id="@+id/distance"
            style="@style/ride_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Distance : 0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/map_img"
            app:layout_constraintStart_toStartOf="@id/map_img"
            app:layout_constraintTop_toBottomOf="@+id/date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>